# paoo-homework

./: CMakeLists.txt  README.md  build.sh  main.cpp
inc/: BaseLogger.hpp  FileLogger.hpp  Logger.hpp  StdoutLogger.hpp  utils.hpp
include/: Logger.h
src/: BaseLogger.cpp  FileLogger.cpp  Logger.cpp  StdoutLogger.cpp  utils.cpp
